--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "jest",
     "clean": "rimraf dist",
+    "postinstall": "npm run build",
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'",
     "start": "node index.js",
     "start:prod": "cross-env NODE_ENV=production node index.js",
