--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "jest": "^23.6.0",
     "open-browser-webpack-plugin": "0.0.5",
     "postcss-loader": "^3.0.0",
+    "puppeteer": "^1.11.0",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.5",
