--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=6.9.5"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --config ./src/jest.config.js",
+    "test-e2e": "jest --config ./e2e/jest-e2e.config.js",
     "clean": "rimraf dist",
     "postinstall": "npm run build",
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'",
@@ -57,37 +58,14 @@
     "react-router-dom": "^4.3.1",
     "tslib": "^1.9.3"
   },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "setupTestFrameworkScriptFile": "<rootDir>/src/client/setupEnzyme.ts",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "<rootDir>/src/tsconfig-for-tests.json"
-      }
-    }
-  },
   "devDependencies": {
     "@types/enzyme": "^3.1.15",
+    "@types/expect-puppeteer": "^3.3.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.12",
+    "@types/jest-environment-puppeteer": "^2.2.1",
     "@types/node": "^10.12.18",
+    "@types/puppeteer": "^1.11.1",
     "@types/react": "^16.7.18",
     "awesome-typescript-loader": "^5.2.1",
     "babel-polyfill": "^6.26.0",
@@ -101,6 +79,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "jest-puppeteer": "^3.8.0",
     "open-browser-webpack-plugin": "0.0.5",
     "postcss-loader": "^3.0.0",
     "puppeteer": "^1.11.0",
