--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hubble",
   "version": "0.0.1",
-  "description": "",
+  "description": "Hubble, Orbs block explorer",
   "main": "index.js",
   "engines": {
-    "node": ">=6.9.5"
+    "node": ">=10.6.0"
   },
   "scripts": {
     "test": "jest --config ./src/jest.config.js",
@@ -46,19 +46,16 @@
   "license": "MIT",
   "author": "Gil Amran",
   "dependencies": {
-    "@material-ui/core": "^3.8.3",
-    "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "http-proxy-middleware": "^0.19.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "tslib": "^1.9.3"
+    "express": "^4.16.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
     "@types/enzyme": "^3.1.15",
     "@types/expect-puppeteer": "^3.3.0",
     "@types/express": "^4.16.0",
@@ -67,7 +64,8 @@
     "@types/node": "^10.12.18",
     "@types/puppeteer": "^1.11.1",
     "@types/react": "^16.7.18",
-    "awesome-typescript-loader": "^5.2.1",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
@@ -78,15 +76,22 @@
     "enzyme-to-json": "^3.3.5",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.19.1",
     "jest": "^23.6.0",
     "jest-puppeteer": "^3.8.0",
     "open-browser-webpack-plugin": "github:rodrigopandini/open-browser-webpack-plugin",
     "postcss-loader": "^3.0.0",
     "puppeteer": "^1.11.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "rimraf": "^2.6.3",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.5",
     "tsc-watch": "^1.0.31",
+    "tslib": "^1.9.3",
     "tslint": "^5.12.1",
     "typescript": "^3.2.2",
     "url-loader": "^1.1.2",
