added numeric-separator and remove babel-polyfill

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["@babel/react", "@babel/typescript", ["@babel/env", { "modules": false }]],
   "plugins": [
+    "@babel/proposal-numeric-separator",
     "@babel/plugin-transform-runtime",
     "@babel/proposal-class-properties",
     "@babel/proposal-object-rest-spread"
