--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["@babel/react", "@babel/typescript", ["@babel/env", { "modules": false }]],
   "plugins": [
+    "react-hot-loader/babel",
     "@babel/proposal-numeric-separator",
     "@babel/plugin-transform-runtime",
     "@babel/proposal-class-properties",
