--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["@babel/react", "@babel/typescript", ["@babel/env", { "modules": false }]],
+  "presets": [["@babel/env", { "modules": false }], "@babel/react", "@babel/typescript"],
   "plugins": [
     "react-hot-loader/babel",
     "@babel/proposal-numeric-separator",
