--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -3,8 +3,9 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
-    "lib": ["es6"],
+    "lib": ["es6", "dom"],
     "types": ["node", "jest", "jest-environment-puppeteer", "expect-puppeteer"],
     "noEmit": true
-  }
+  },
+  "include": ["types.d.ts", "matchers.ts"]
 }
