--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "object-hash": "^1.3.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
