--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "object-hash": "^1.3.1",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
