--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "license": "MIT",
   "author": "Gil Amran",
   "dependencies": {
+    "@types/react-redux": "^7.0.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "object-hash": "^1.3.1",
@@ -55,7 +56,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "typesafe-actions": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
