--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "timeago.js": "^4.0.0-beta.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
