--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "timeago.js": "^4.0.0-beta.2"
+    "timeago.js": "^4.0.0-beta.2",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -107,7 +108,6 @@
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.5",
     "tsc-watch": "^1.1.35",
-    "tslib": "^1.9.3",
     "tslint": "^5.12.1",
     "typescript": "^3.2.2",
     "url-loader": "^1.1.2",
