back to start:prod

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "clean": "rimraf dist",
     "postinstall": "npm run build",
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'",
-    "start": "cross-env NODE_ENV=production node index.js",
-    "start:dev": "node index.js",
+    "start": "node index.js",
+    "start:prod": "NODE_ENV=production node index.js",
     "build-client": "cross-env NODE_ENV=production webpack -p",
     "dev-client": "webpack-dev-server -w",
     "dev-client:hot": "webpack-dev-server -w --hot",
