--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "author": "Gil Amran",
   "dependencies": {
     "@types/react-redux": "^7.0.1",
+    "@types/three": "^0.93.19",
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
@@ -59,6 +60,7 @@
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
+    "three.js": "^0.77.1",
     "timeago.js": "^4.0.0-beta.2",
     "tslib": "^1.9.3"
   },
