--- a/package.json
+++ b/package.json
@@ -55,12 +55,13 @@
     "express": "^4.16.4",
     "http-proxy-middleware": "^0.19.1",
     "object-hash": "^1.3.1",
+    "postprocessing": "^5.6.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "three.js": "^0.77.1",
+    "three": "^0.101.1",
     "timeago.js": "^4.0.0-beta.2",
     "tslib": "^1.9.3"
   },
