--- a/package.json
+++ b/package.json
@@ -49,14 +49,17 @@
   "author": "Gil Amran",
   "dependencies": {
     "@types/gsap": "^1.20.1",
+    "@types/pg": "^7.4.11",
     "@types/react-redux": "^7.0.1",
     "@types/three": "^0.93.19",
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "gsap": "^2.0.2",
     "http-proxy-middleware": "^0.19.1",
     "object-hash": "^1.3.1",
+    "pg": "^7.8.0",
     "postprocessing": "^5.6.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
