Added tests to the storage

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -11,5 +11,5 @@
     "moduleResolution": "node",
     "types": ["node"]
   },
-  "files": ["./main.ts"]
+  "files": ["./main.ts", "./**/*.test.ts"]
 }
