Pooling interval is taken from the config

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DATABASE_URL=postgres://hubble-admin:123123@localhost:5432/hubble
 ORBS_ENDPOINT=http://localhost:9000
 ORBS_VIRTUAL_CHAIN_ID=42
 ORBS_NETWORK_TYPE=TEST_NET
+POOLING_INTERVAL=1000
