--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hubble",
+  "name": "prizm",
   "version": "0.0.1",
-  "description": "Hubble, Orbs block explorer",
+  "description": "Prizm, Orbs block explorer",
   "main": "index.js",
   "engines": {
     "node": ">=10.6.0"
@@ -43,7 +43,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/orbs-network/hubble.git"
+    "url": "https://github.com/orbs-network/prizm.git"
   },
   "license": "MIT",
   "author": "Gil Amran",
