Choosing DB according to env variables

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-// localhost
-DATABASE_URL=postgres://hubble-admin:123123@localhost:5432/hubble
+### localhost
+# DATABASE_URL=postgres://hubble-admin:123123@localhost:5432/hubble
 
-// Orbs adapter config
+### Orbs adapter config
 ORBS_ENDPOINT=http://localhost:9000
 ORBS_VIRTUAL_CHAIN_ID=42
 ORBS_NETWORK_TYPE=TEST_NET
