--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,16 @@
 version: 2
-jobs:
+jobs: 
   build:
-    docker:
-      - image: circleci/node:10.6
-    steps:
-      - checkout
-      - run: sudo apt-get update && sudo apt-get install -yq --no-install-recommends libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 libnss3
-      - run: npm install
-      - run: npm test
-  e2e:
     machine: true
     steps:
       - checkout
       - run: sudo apt-get update && sudo apt-get install -yq --no-install-recommends libasound2 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 libnss3
-      - run: nvm install
-      # - run: npm install
-      # - run: docker pull orbsnetwork/gamma:experimental
-      # - run: docker run -d -p "9000:8080" orbsnetwork/gamma:experimental
-      # - run: npm run test-e2e
-
-workflows:
-  version: 2
-  commit:
-    jobs:
-      - build
-      - e2e
+      - run: curl -sL https://deb.nodesource.com/setup_10.x | sudo bash -
+      - run: sudo apt-get install -y nodejs
+      - run: npm install
+      - run: npm test
+      - run: docker pull orbsnetwork/gamma:experimental
+      - run: docker run -d -p "9000:8080" orbsnetwork/gamma:experimental
+      - run: npm run build
+      - run: npm run test-e2e
+      - run: docker ps -qa | xargs docker rm -fv
