Reading mongo config from env.

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-### localhost
-# DATABASE_URL=postgres://hubble-admin:123123@localhost:5432/hubble
+POSTGRES_URL=postgres://prism-admin:123123@localhost:5432/prism
+MONGO_URL=mongodb://localhost:27017/prism
+
+DATABASE_TYPE=MONGO
 
 ### Orbs adapter config
 ORBS_ENDPOINT=http://localhost:9000
