Renamed mongo env. name

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_URL=postgres://prism-admin:123123@localhost:5432/prism
-MONGO_URL=mongodb://localhost:27017/prism
+MONGODB_URI=mongodb://localhost:27017/prism
 
 DATABASE_TYPE=MONGO
 
