--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "find-up": "^3.0.0",
     "gsap": "^2.0.2",
     "http-proxy-middleware": "^0.19.1",
     "mongoose": "^5.4.17",
