--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "gsap": "^2.0.2",
     "http-proxy-middleware": "^0.19.1",
     "mongoose": "^5.4.17",
+    "mongoose-long": "^0.2.1",
     "object-hash": "^1.3.1",
     "orbs-client-sdk": "0.0.4",
     "pg": "^7.8.0",
