--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "esnext",
     "module": "commonjs",
     "moduleResolution": "node",
-    "lib": ["es6", "dom"],
+    "lib": ["esnext", "dom"],
     "types": ["node", "jest", "jest-environment-puppeteer", "expect-puppeteer"],
     "noEmit": true
   },
