--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
     "outDir": "./dist",
-    "lib": ["es2015", "dom"],
+    "lib": ["esnext", "dom"],
     "types": [],
     "jsx": "react"
   },
