Organized ts projects

--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -7,6 +7,5 @@
     "types": ["node", "jest", "jest-environment-puppeteer", "expect-puppeteer"],
     "noEmit": true
   },
-  "include": ["*.test.ts"],
-  "files": ["types.d.ts"]
+  "include": ["**/*.test.ts", "types.d.ts"]
 }
