--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -11,5 +11,6 @@
     "moduleResolution": "node",
     "types": ["node"]
   },
-  "files": ["./main.ts"]
+  "include": ["**/*.ts"],
+  "exclude": ["**/*.test.ts"]
 }
