Organized all the tests under the same folder

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -11,5 +11,5 @@
     "jsx": "react"
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
+  "exclude": ["__tests__"]
 }
