--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "request": "launch",
       "name": "Debug server tests",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "args": ["--config", "./src/server/jest.config.js", "--runInBand"],
+      "args": ["--config", "./src/server/__tests__/jest.config.js", "--runInBand"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "disableOptimisticBPs": true,
