Added timestamp field

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "pg": "^7.8.0",
     "postprocessing": "^5.6.0",
     "react-redux": "^6.0.0",
+    "react-timeago": "^4.4.0",
     "react-transition-group": "^2.6.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
