--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "pg": "^7.8.0",
     "postprocessing": "^5.6.0",
     "react-redux": "^6.0.0",
+    "react-spring": "^8.0.18",
     "react-timeago": "^4.4.0",
-    "react-transition-group": "^2.6.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
