--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "body-parser": "^1.18.3",
     "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "find-up": "^3.0.0",
     "gsap": "^2.0.2",
@@ -108,7 +109,6 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
     "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "jest-puppeteer": "^3.9.1",
     "open-browser-webpack-plugin": "github:rodrigopandini/open-browser-webpack-plugin",
@@ -129,6 +129,7 @@
     "webpack": "^4.28.4",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-manifest-plugin": "^2.0.4"
   }
 }
