--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,19 +3,20 @@
   // for the documentation about the tasks.json format
   "version": "2.0.0",
   "tasks": [
-		{
-			"type": "npm",
-			"script": "build-server",
-			"problemMatcher": [
-				"$tsc"
-			]
-		},
-		{
-			"type": "npm",
-			"script": "build",
-			"problemMatcher": [
-				"$tsc"
-			]
-		}
-	]
+    {
+      "type": "npm",
+      "label": "build-server",
+      "script": "build-server",
+      "problemMatcher": ["$tsc"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      }
+    },
+    {
+      "type": "npm",
+      "script": "build",
+      "problemMatcher": ["$tsc"]
+    }
+  ]
 }
