--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "scripts": {
     "test": "npm run test-server",
-    "test-server": "jest --config ./src/server/__tests__/jest.config.js",
+    "test-server": "node env-checker.js && jest --config ./src/server/__tests__/jest.config.js",
     "test-client": "jest --config ./src/client/__tests__/jest.config.js",
-    "test-e2e": "jest --config ./e2e/jest-e2e.config.js",
+    "test-e2e": "node env-checker.js && jest --config ./e2e/jest-e2e.config.js",
     "clean": "rimraf dist",
     "postinstall": "npm run build",
     "lint": "tslint -c tslint.json 'src/**/*.ts' 'src/**/*.tsx'",
