--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "three": "^0.101.1",
-    "tslib": "^1.9.3"
+    "tslib": "^1.9.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
