--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "socket.io-client": "^2.2.0",
     "three": "^0.101.1",
     "tslib": "^1.9.3",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-transport-rollbar": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
