--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,29 @@
 version: 2
 jobs: 
-  build:
+  tests:
     machine: true
     steps:
       - checkout
       - run: ./.circleci/setup.sh
+
+  release:
+    machine: true
+    steps:
+      - checkout
+      - run: ./docker-build.sh
+      - run: ./.circleci/release.sh
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - tests
+      - release:
+          requires:
+            - tests
+          filters:
+            branches:
+              only:
+                - feature/docker
+            tags:
+              only: /^v.*/
