Slimmer docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,13 @@ jobs:
     steps:
       - checkout
       - run: ./.circleci/setup.sh
+      - run: ./.circleci/test.sh
 
   release:
     machine: true
     steps:
       - checkout
+      - run: ./.circleci/setup.sh
       - run: ./docker-build.sh
       - run: ./.circleci/release.sh
 
