--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-timeago": "^4.4.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "request": "^2.88.0",
     "rollbar": "^2.5.4",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
