Added the ability to debug client-tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,20 @@
       }
     },
     {
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug client tests",
+      "program": "${workspaceFolder}/node_modules/.bin/jest",
+      "args": ["--config", "./src/client/__tests__/jest.config.js", "--runInBand"],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "disableOptimisticBPs": true,
+      "windows": {
+        "program": "${workspaceFolder}/node_modules/jest/bin/jest"
+      }
+    },
+    {
       "type": "node",
       "request": "launch",
       "name": "Debug server",
