--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "postprocessing": "^5.6.0",
     "react-redux": "^6.0.0",
     "react-spring": "^8.0.18",
+    "react-syntax-highlighter": "^10.2.1",
     "react-timeago": "^4.4.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
