Simplified .env requirements

--- a/.env
+++ b/.env
@@ -1,10 +1,7 @@
-POSTGRES_URL=postgres://prism-admin:123123@localhost:5432/prism
-MONGODB_URI=mongodb://localhost:27017/prism
-
-DATABASE_TYPE=MONGO
+DATABASE_TYPE=IN_MEMORY
 
 ### Orbs adapter config
 ORBS_ENDPOINT=http://localhost:9000
 ORBS_VIRTUAL_CHAIN_ID=42
 ORBS_NETWORK_TYPE=TEST_NET
-POOLING_INTERVAL=1000
+POOLING_INTERVAL=2000
