--- a/.env
+++ b/.env
@@ -1,7 +1,28 @@
-DATABASE_TYPE=IN_MEMORY
+################# Server #################
+# PORT=3000
 
-### Orbs adapter config
+
+############### Analytics ################
+# ROLLBAR_ACCESS_TOKEN_SERVER=...
+# GOOGLE_ANALYTICS_KEY=...
+
+
+################# Database #################
+DATABASE_TYPE=MONGO # MONGO or IN_MEMORY
+MONGODB_URI=mongodb://localhost:27017/prism
+DB_IS_READ_ONLY=false
+
+
+############### Orbs client ###############
 ORBS_ENDPOINT=http://localhost:8080
 ORBS_VIRTUAL_CHAIN_ID=42
 ORBS_NETWORK_TYPE=TEST_NET
+
+
+########### Pooling new blocks ###########
 POOLING_INTERVAL=2000
+
+
+############## Gaps filler ##############
+GAP_FILLER_ACTIVE=false
+GAP_FILLER_INTERVAL_IN_MINUTES=30
