ignoring local test environments

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@
 
 
 ############### Analytics ################
+# ROLLBAR_ACCESS_TOKEN_CLIENT=...
 # ROLLBAR_ACCESS_TOKEN_SERVER=...
 # GOOGLE_ANALYTICS_KEY=...
 
