Using a more specific config naming

--- a/.env
+++ b/.env
@@ -1,11 +1,18 @@
 ################# Server #################
 # PORT=3000
-
+FORCE_HTTPS=false
 
 ############### Analytics ################
 # ROLLBAR_ACCESS_TOKEN_CLIENT=...
 # ROLLBAR_ACCESS_TOKEN_SERVER=...
 # GOOGLE_ANALYTICS_KEY=...
+
+
+################# Debug #################
+MINIFY_JS_FILES=false
+LOG_TO_CONSOLE=true
+LOG_TO_FILE=false
+LOG_TO_ROLLBAR=false
 
 
 ################# Database #################
