Fixed .env DATABASE_TYPE comment

--- a/.env
+++ b/.env
@@ -16,7 +16,8 @@ LOG_TO_ROLLBAR=false
 
 
 ################# Database #################
-DATABASE_TYPE=MONGO # MONGO or IN_MEMORY
+# MONGO or IN_MEMORY
+DATABASE_TYPE=MONGO
 MONGODB_URI=mongodb://localhost:27017/prism
 DB_IS_READ_ONLY=false
 
