--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,14 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Debug rebuild-db",
+      "program": "${workspaceFolder}/dist/server-root/server/db/rebuild-db.js",
+      "preLaunchTask": "build-server"
+    },
+    
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Debug server tests",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
       "args": ["--config", "./src/server/__tests__/jest.config.js", "--runInBand"],
