--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "orbs-client-sdk": "0.0.6",
     "pg": "^7.8.0",
     "postprocessing": "^5.6.0",
+    "query-string": "^6.5.0",
     "react-redux": "^6.0.0",
     "react-spring": "^8.0.18",
     "react-syntax-highlighter": "^10.2.1",
