--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -3,7 +3,9 @@
     "target": "esnext",
     "moduleResolution": "node",
     "sourceMap": true,
+    "noEmit": true,
     "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
     "isolatedModules": true,
     "outDir": "../../dist/client",
     "lib": ["esnext", "dom"],
