in progress next prev

--- a/.env
+++ b/.env
@@ -18,13 +18,13 @@ LOG_TO_ROLLBAR=false
 ################# Database #################
 # MONGO or IN_MEMORY
 DATABASE_TYPE=MONGO
-MONGODB_URI=mongodb://localhost:27017/prism
-DB_IS_READ_ONLY=false
+MONGODB_URI=mongodb://heroku_2pph1kqm:lsomno9nbkkcedo9p5ribluci6@ds135776.mlab.com:35776/heroku_2pph1kqm
+DB_IS_READ_ONLY=true
 
 
 ############### Orbs client ###############
-ORBS_ENDPOINT=http://localhost:8080
-ORBS_VIRTUAL_CHAIN_ID=42
+ORBS_ENDPOINT=http://validator.orbs-test.com/vchains/2013/
+ORBS_VIRTUAL_CHAIN_ID=2013
 ORBS_NETWORK_TYPE=TEST_NET
 
 
