Added configuration documentation

--- a/.env
+++ b/.env
@@ -9,29 +9,28 @@ FORCE_HTTPS=false
 
 
 ################# Debug #################
-MINIFY_JS_FILES=false
-LOG_TO_CONSOLE=true
-LOG_TO_FILE=false
-LOG_TO_ROLLBAR=false
+MINIFYED_REACT_JS=false
+# LOG_TO_CONSOLE=true
+# LOG_TO_FILE=false
+# LOG_TO_ROLLBAR=false
 
 
 ################# Database #################
 # MONGO or IN_MEMORY
 DATABASE_TYPE=MONGO
-MONGODB_URI=mongodb://heroku_2pph1kqm:lsomno9nbkkcedo9p5ribluci6@ds135776.mlab.com:35776/heroku_2pph1kqm
-DB_IS_READ_ONLY=true
+MONGODB_URI=mongodb://localhost:27017/prism
+# DB_IS_READ_ONLY=false
 
 
 ############### Orbs client ###############
-ORBS_ENDPOINT=http://validator.orbs-test.com/vchains/2013/
-ORBS_VIRTUAL_CHAIN_ID=2013
-ORBS_NETWORK_TYPE=TEST_NET
+ORBS_ENDPOINT=http://localhost:8080
+ORBS_VIRTUAL_CHAIN_ID=42
 
 
 ########### Pooling new blocks ###########
-POOLING_INTERVAL=2000
+# POOLING_INTERVAL=2000
 
 
 ############## Gaps filler ##############
 GAP_FILLER_ACTIVE=false
-GAP_FILLER_INTERVAL_IN_MINUTES=30
+# GAP_FILLER_INTERVAL_IN_MINUTES=30
