--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
     "rollbar": "^2.5.4",
+    "semver": "^6.1.1",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "three": "^0.101.1",
@@ -108,6 +109,7 @@
     "@types/node": "^10.12.18",
     "@types/puppeteer": "^1.11.1",
     "@types/react": "^16.7.18",
+    "@types/semver": "^6.0.0",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "axios": "^0.18.0",
