change the default env to match gamma-cli

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ################# Server #################
 # PORT=3000
-FORCE_HTTPS=false
+# FORCE_HTTPS=false
 
 ############### Analytics ################
 # ROLLBAR_ACCESS_TOKEN_CLIENT=...
@@ -23,8 +23,8 @@ MONGODB_URI=mongodb://localhost:27017/prism
 
 
 ############### Orbs client ###############
-ORBS_ENDPOINT=http://localhost:8080
-ORBS_VIRTUAL_CHAIN_ID=42
+# ORBS_ENDPOINT=http://localhost:8080
+# ORBS_VIRTUAL_CHAIN_ID=42
 
 
 ########### Pooling new blocks ###########
