Added init to OrbsAdapter

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ################# Server #################
 # PORT=3000
-# FORCE_HTTPS=false
+# FORCE_HTTPS=true
 
 ############### Analytics ################
 # ROLLBAR_ACCESS_TOKEN_CLIENT=...
