--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "mongoose": "^5.4.17",
     "mongoose-long": "^0.2.1",
     "object-hash": "^1.3.1",
-    "orbs-client-sdk": "0.0.6",
+    "orbs-blocks-polling-js": "0.0.7",
+    "orbs-client-sdk": "^1.3.2",
     "pg": "^7.8.0",
     "postprocessing": "^5.6.0",
     "query-string": "^6.5.0",
