--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
-  "presets": [["@babel/env", { "modules": false }], "@babel/react", "@babel/typescript"],
+  "presets": [["@babel/env", { "modules": false, "loose": true }], "@babel/react", "@babel/typescript"],
   "plugins": [
     "@babel/proposal-numeric-separator",
     "@babel/plugin-transform-runtime",
-    "@babel/proposal-class-properties",
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
     "@babel/proposal-object-rest-spread"
   ]
 }
