Disabled DBBuilder as it's too slow on startup

--- a/.env
+++ b/.env
@@ -18,13 +18,13 @@ MINIFYED_REACT_JS=false
 ################# Database #################
 # MONGO or IN_MEMORY
 DATABASE_TYPE=MONGO
-MONGODB_URI=mongodb://localhost:27017/prism
+MONGODB_URI=mongodb://localhost:27017/prismi
 # DB_IS_READ_ONLY=false
 
 
 ############### Orbs client ###############
-# ORBS_ENDPOINT=http://localhost:8080
-# ORBS_VIRTUAL_CHAIN_ID=42
+ORBS_ENDPOINT=http://validator.orbs.com/vchains/1960000
+ORBS_VIRTUAL_CHAIN_ID=1960000
 
 
 ########### Pooling new blocks ###########
