--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Prism, Orbs block explorer",
   "main": "index.js",
   "engines": {
-    "node": ">=10.6.0"
+    "node": "10.17.0"
   },
   "scripts": {
     "publish": "node release.js",
@@ -50,99 +50,99 @@
   "license": "MIT",
   "author": "Gil Amran",
   "dependencies": {
-    "@types/dotenv": "^6.1.0",
-    "@types/find-up": "^2.1.1",
-    "@types/gsap": "^1.20.1",
-    "@types/mongoose": "^5.3.20",
-    "@types/pg": "^7.4.11",
-    "@types/react-redux": "^7.0.1",
-    "@types/three": "^0.93.19",
-    "body-parser": "^1.18.3",
-    "cloudinary": "^1.14.0",
-    "concurrently": "^4.1.0",
-    "cross-env": "^5.2.0",
-    "dotenv": "^6.2.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "find-up": "^3.0.0",
-    "gsap": "^2.0.2",
-    "mongoose": "^5.4.17",
+    "@types/dotenv": "^8.2.0",
+    "@types/find-up": "^4.0.0",
+    "@types/gsap": "^1.20.2",
+    "@types/mongoose": "^5.5.31",
+    "@types/pg": "^7.11.2",
+    "@types/react-redux": "^7.1.5",
+    "@types/three": "^0.103.2",
+    "body-parser": "^1.19.0",
+    "cloudinary": "^1.17.0",
+    "concurrently": "^5.0.0",
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
+    "ejs": "^2.7.2",
+    "express": "^4.17.1",
+    "find-up": "^4.1.0",
+    "gsap": "^3.0.1",
+    "mongoose": "^5.7.10",
     "mongoose-long": "^0.2.1",
-    "object-hash": "^1.3.1",
+    "object-hash": "^2.0.0",
     "orbs-blocks-polling-js": "^2.0.1",
     "orbs-client-sdk": "^2.2.2",
-    "pg": "^7.8.0",
-    "postprocessing": "^5.6.0",
-    "query-string": "^6.5.0",
-    "react-redux": "^6.0.0",
-    "react-spring": "^8.0.18",
-    "react-syntax-highlighter": "^10.2.1",
+    "pg": "^7.12.1",
+    "postprocessing": "^6.8.8",
+    "query-string": "^6.9.0",
+    "react-redux": "^7.1.3",
+    "react-spring": "^8.0.27",
+    "react-syntax-highlighter": "^11.0.2",
     "react-timeago": "^4.4.0",
-    "redux": "^4.0.1",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "rollbar": "^2.5.4",
-    "semver": "^6.1.1",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "three": "^0.101.1",
-    "tslib": "^1.9.3",
+    "rollbar": "^2.14.4",
+    "semver": "^6.3.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "three": "^0.110.0",
+    "tslib": "^1.10.0",
     "winston": "^3.2.1",
     "winston-transport-rollbar": "^2.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
-    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-decorators": "^7.7.0",
     "@babel/plugin-proposal-numeric-separator": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "@types/enzyme": "^3.1.15",
-    "@types/expect-puppeteer": "^3.3.0",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.14",
-    "@types/jest-environment-puppeteer": "^2.2.1",
-    "@types/node": "^10.12.18",
-    "@types/puppeteer": "^1.11.1",
-    "@types/react": "^16.7.18",
-    "@types/semver": "^6.0.0",
-    "@types/socket.io": "^2.1.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.2",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
+    "@types/enzyme": "^3.10.3",
+    "@types/expect-puppeteer": "^3.3.3",
+    "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.23",
+    "@types/jest-environment-puppeteer": "^4.3.1",
+    "@types/node": "^12.12.7",
+    "@types/puppeteer": "^1.20.2",
+    "@types/react": "^16.9.11",
+    "@types/semver": "^6.2.0",
+    "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
-    "axios": "^0.18.0",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
-    "cssnano": "^4.1.8",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "enzyme-to-json": "^3.3.5",
-    "file-loader": "^3.0.1",
-    "http-proxy-middleware": "^0.19.1",
-    "jest": "^23.6.0",
-    "jest-puppeteer": "^3.9.1",
+    "axios": "^0.19.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "cssnano": "^4.1.10",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
+    "file-loader": "^4.2.0",
+    "http-proxy-middleware": "^0.20.0",
+    "jest": "^24.9.0",
+    "jest-puppeteer": "^4.3.0",
     "open-browser-webpack-plugin": "github:rodrigopandini/open-browser-webpack-plugin",
     "postcss-loader": "^3.0.0",
-    "puppeteer": "^1.11.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "puppeteer": "^2.0.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "request": "^2.88.0",
-    "rimraf": "^2.6.3",
+    "rimraf": "^3.0.0",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "ts-jest": "^23.10.5",
-    "tsc-watch": "^1.1.35",
-    "tslint": "^5.12.1",
-    "typescript": "^3.5.2",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.28.4",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-manifest-plugin": "^2.0.4"
+    "style-loader": "^1.0.0",
+    "ts-jest": "^24.1.0",
+    "tsc-watch": "^4.0.0",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-manifest-plugin": "^2.2.0"
   }
 }
