--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "find-up": "^4.1.0",
-    "gsap": "^3.0.4",
+    "gsap": "^3.0.1",
     "mongoose": "^5.8.1",
+    "lodash": "^4.17.15",
     "mongoose-long": "^0.2.1",
     "object-hash": "^2.0.1",
     "orbs-blocks-polling-js": "^2.0.1",
