Prepares base for 'Db builder' tests + adds configs to 'Db Builder'

--- a/package.json
+++ b/package.json
@@ -107,6 +107,8 @@
     "@types/puppeteer": "^2.0.0",
     "@types/react": "^16.9.16",
     "@types/react-redux": "^7.1.5",
+    "@types/jest-expect-message": "^1.0.1",
+    "@types/lodash": "^4.14.149",
     "@types/semver": "^6.2.0",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
@@ -121,6 +123,7 @@
     "file-loader": "^5.0.2",
     "http-proxy-middleware": "^0.20.0",
     "jest": "^24.9.0",
+    "jest-expect-message": "^1.0.2",
     "jest-puppeteer": "^4.3.0",
     "open-browser-webpack-plugin": "github:rodrigopandini/open-browser-webpack-plugin",
     "postcss-loader": "^3.0.0",
