--- a/package.json
+++ b/package.json
@@ -50,8 +50,13 @@
   "license": "MIT",
   "author": "Gil Amran",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cloudinary": "^1.18.1",
+    "@types/dotenv": "^8.2.0",
+    "@types/find-up": "^4.0.0",
+    "@types/gsap": "^1.20.2",
+    "@types/mongoose": "^5.5.34",
+    "@types/pg": "^7.11.2",
+    "@types/react-redux": "^7.1.5",
+    "@types/three": "^0.103.2",
     "concurrently": "^5.0.1",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
