Fixes tests + Add implementation for DB builder that passes smost of them

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "fill-range": "^7.0.1",
     "find-up": "^4.1.0",
     "gsap": "^3.0.1",
     "mongoose": "^5.8.1",
