Adds an API endpoint for diagnostics

--- a/package.json
+++ b/package.json
@@ -64,8 +64,9 @@
     "express": "^4.17.1",
     "fill-range": "^7.0.1",
     "find-up": "^4.1.0",
-    "gsap": "^3.0.1",
     "mongoose": "^5.8.1",
+    "gsap": "^3.0.2",
+    "http-status-codes": "^1.4.0",
     "lodash": "^4.17.15",
     "mongoose-long": "^0.2.1",
     "object-hash": "^2.0.1",
