--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "orbs-blocks-polling-js": "^2.0.1",
     "orbs-client-sdk": "^2.2.2",
     "postprocessing": "^6.9.0",
+    "prom-client": "^11.5.3",
     "query-string": "^6.9.0",
     "react-redux": "^7.1.3",
     "react-spring": "^8.0.27",
