--- a/.env
+++ b/.env
@@ -30,6 +30,9 @@ MONGODB_URI=mongodb://localhost:27017/prism
 ########### Pooling new blocks ###########
 # POOLING_INTERVAL=2000
 
+############## DB Builder ##############
+BLOCKS_POLLING_BATCH_SIZE=1000
+MAXIMUM_PARALLEL_PROMISES=100
 
 ############## Gaps filler ##############
 GAP_FILLER_ACTIVE=false
