--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "postprocessing": "^6.9.0",
     "prom-client": "^11.5.3",
     "query-string": "^6.9.0",
+    "react-hanger": "^2.1.3",
     "react-redux": "^7.1.3",
     "react-spring": "^8.0.27",
     "react-syntax-highlighter": "^12.0.2",
@@ -109,13 +110,13 @@
     "@types/gsap": "^1.20.2",
     "@types/jest": "^24.0.23",
     "@types/jest-environment-puppeteer": "^4.3.1",
+    "@types/jest-expect-message": "^1.0.1",
+    "@types/lodash": "^4.14.149",
     "@types/mongoose": "^5.5.34",
     "@types/node": "^12.12.17",
     "@types/puppeteer": "^2.0.0",
     "@types/react": "^16.9.16",
     "@types/react-redux": "^7.1.5",
-    "@types/jest-expect-message": "^1.0.1",
-    "@types/lodash": "^4.14.149",
     "@types/semver": "^6.2.0",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
