--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "@types/three": "^0.103.2",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "cloudinary": "^1.18.1",
     "css-loader": "^3.3.2",
     "cssnano": "^4.1.10",
     "enzyme": "^3.10.0",
