--- a/package.json
+++ b/package.json
@@ -122,6 +122,8 @@
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "@types/three": "^0.103.2",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "cloudinary": "^1.18.1",
@@ -130,6 +132,11 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "file-loader": "^5.0.2",
     "http-proxy-middleware": "^0.20.0",
     "jest": "^24.9.0",
@@ -138,6 +145,7 @@
     "open-browser-webpack-plugin": "github:rodrigopandini/open-browser-webpack-plugin",
     "postcss-loader": "^3.0.0",
     "puppeteer": "^2.0.0",
+    "prettier": "^2.0.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
