add basic HTTP digest authentication

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 ################# Server #################
 # PORT=3000
 # FORCE_HTTPS=true
+# AUTHENTICATION=admin:swordfish
 
 ############### Analytics ################
 # ROLLBAR_ACCESS_TOKEN_CLIENT=...
