--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@types/find-up": "^4.0.0",
     "@types/gsap": "^1.20.2",
     "@types/mongoose": "^5.5.34",
+    "@types/passport": "^1.0.4",
+    "@types/passport-http": "^0.3.8",
     "@types/pg": "^7.11.2",
     "@types/react-redux": "^7.1.5",
     "@types/three": "^0.103.2",
@@ -73,6 +75,8 @@
     "object-hash": "^2.0.1",
     "orbs-blocks-polling-js": "^2.0.1",
     "orbs-client-sdk": "^2.4.0",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "postprocessing": "^6.9.0",
     "prom-client": "^11.5.3",
     "query-string": "^6.9.0",
